--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Connect 4</title>
-    <link rel="stylesheet" href="resources/css/index.css">
 </head>
 <body>
-    <canvas id="game" height="600" width="800"></canvas>
-    <script src="/build/index.js" type="module" ></script>
+<canvas id="game" height="600" width="800"></canvas>
 
+
+<!-- [1] -->
+<div id="modal-1" aria-hidden="true">
+
+    <!-- [2] -->
+    <div tabindex="-1" data-micromodal-close>
+
+        <!-- [3] -->
+        <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+
+
+            <header>
+                <h2 id="modal-1-title">
+                    Modal Title
+                </h2>
+
+                <!-- [4] -->
+                <button aria-label="Close modal" data-micromodal-close></button>
+            </header>
+
+            <div id="modal-1-content">
+                Modal Content
+            </div>
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
