--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
 <canvas id="game" height="600" width="800"></canvas>
 
 
-<!-- [1] -->
-<div id="modal-1" aria-hidden="true">
-
-    <!-- [2] -->
-    <div tabindex="-1" data-micromodal-close>
-
-        <!-- [3] -->
-        <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
-
-
-            <header>
-                <h2 id="modal-1-title">
-                    Modal Title
+<div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+            <header class="modal__header">
+                <h2 class="modal__title" id="modal-1-title">
+                    Micromodal
                 </h2>
-
-                <!-- [4] -->
-                <button aria-label="Close modal" data-micromodal-close></button>
+                <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
             </header>
-
-            <div id="modal-1-content">
-                Modal Content
-            </div>
-
+            <main class="modal__content" id="modal-1-content">
+                <p>
+                    Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also,
+                    <code>esc</code> to close modal.
+                </p>
+            </main>
+            <footer class="modal__footer">
+                <button class="modal__btn modal__btn-primary">Continue</button>
+                <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
+            </footer>
         </div>
     </div>
 </div>
