--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
             <header class="modal__header">
                 <h2 class="modal__title" id="modal-1-title">
-                    Micromodal
+                    Fim de jogoo
                 </h2>
                 <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
             </header>
             <main class="modal__content" id="modal-1-content">
                 <p>
-                    Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also,
+                    Try hitting theA <code>tab</code> key and notice how the focus stays within the modal itself. Also,
                     <code>esc</code> to close modal.
                 </p>
             </main>
