--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
 <canvas id="game" height="600" width="800"></canvas>
 
 
-<div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+<div class="modal micromodal-slide" id="end-game-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
         <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
             <header class="modal__header">
                 <h2 class="modal__title" id="modal-1-title">
-                    Fim de jogo
+                    title
                 </h2>
                 <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
             </header>
             <main class="modal__content" id="modal-1-content">
-                <p>
-                    Try hitting theA <code>tab</code> key and notice how the focus stays within the modal itself. Also,
-                    <code>esc</code> to close modal.
-                </p>
+                content
             </main>
             <footer class="modal__footer">
                 <button class="modal__btn modal__btn-primary">Continue</button>
