Funcionabilidades para o modal

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 content
             </main>
             <footer class="modal__footer">
-                <button class="modal__btn modal__btn-primary">Continue</button>
-                <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
+                <button class="modal__btn modal__btn-primary modal__btn_ok">Continue</button>
+                <button class="modal__btn modal__btn_close" data-micromodal-close aria-label="Close this dialog window">
+                    Close
+                </button>
             </footer>
         </div>
     </div>
