--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <canvas tabindex="1" id="game" height="600" width="800"></canvas>
 
 
-<div class="modal micromodal-slide" id="end-game-modal" aria-hidden="true">
+<div class="modal micromodal-slide" id="modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
         <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
             <header class="modal__header">
